--- a/pfd3.html
+++ b/pfd3.html
@@ -860,7 +860,6 @@ div.streamPlayer ul {
 	left: 12px;
 	width: 30px;
 	height: 30px;
-	background: transparent url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2230%22%20height%3D%2230%22%20viewBox%3D%220%200%2030%2030%22%3E%3Ccircle%20cx%3D%2215%22%20cy%3D%2215%22%20r%3D%2214%22%20stroke-width%3D%220%22%20fill%3D%22black%22%20fill-opacity%3D%22.28%22%2F%3E%3Cpath%20d%3D%22M10%2C10%2020%2C10%2020%2C20%2010%2C20z%22%20stroke-linejoin%3D%22round%22%20stroke-width%3D%221.5%22%20stroke%3D%22gray%22%20fill-opacity%3D%22.88%22%20stroke-opacity%3D%22.5%22%20fill%3D%22white%22%2F%3E%3C%2Fsvg%3E') no-repeat;
 }
 
 #watch span {
@@ -870,7 +869,6 @@ div.streamPlayer ul {
 	left: 12px;
 	width: 30px;
 	height: 30px;
-	background: transparent url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2230%22%20height%3D%2230%22%20viewBox%3D%220%200%2030%2030%22%3E%3Ccircle%20cx%3D%2215%22%20cy%3D%2215%22%20r%3D%2214%22%20stroke-width%3D%220%22%20fill%3D%22black%22%20fill-opacity%3D%22.28%22%2F%3E%3Cpath%20d%3D%22M10%2C7%2023%2C15%2010%2C23z%22%20stroke-linejoin%3D%22round%22%20stroke-width%3D%221.5%22%20stroke%3D%22gray%22%20fill-opacity%3D%22.88%22%20stroke-opacity%3D%22.5%22%20fill%3D%22white%22%2F%3E%3C%2Fsvg%3E') no-repeat;
 }
 
 /* overridable properties */
@@ -894,12 +892,11 @@ div.streamPlayer:hover {background: rgba(217,11,131,1);}
 		return; // skip player initialization, conditions are not met
 	}
 
-	// solve different colors for UT
-	/*if (window.location.host.indexOf('pornfile') == -1) {
-		var style = document.createElement("style");
-		style.innerHTML = 'div.streamPlayer {background: rgba(213,155,0,0.7)}; div.streamPlayer:hover {background: rgba(213,155,0,1)} ';
-		document.body.appendChild(style);
-	}*/
+	// solve escaping of SVG for MSIE/FF
+	var style = document.createElement("style");
+	style.innerHTML = 'a#watch span { background: transparent url("data:image/svg+xml,' + encodeURIComponent('<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"><circle cx="15" cy="15" r="14" stroke-width="0" fill="black" fill-opacity=".28"/><path d="M10,7 23,15 10,23z" stroke-linejoin="round" stroke-width="1.5" stroke="gray" fill-opacity=".88" stroke-opacity=".5" fill="white"/></svg>') + '") no-repeat} ' + "\n" + 
+		'a#watch span.stop { background: transparent url("data:image/svg+xml,' + encodeURIComponent('<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"><circle cx="15" cy="15" r="14" stroke-width="0" fill="black" fill-opacity=".28"/><path d="M10,10 20,10 20,20 10,20z" stroke-linejoin="round" stroke-width="1.5" stroke="gray" fill-opacity=".88" stroke-opacity=".5" fill="white"/></svg>') + '") no-repeat} ';
+	document.body.appendChild(style);
 
 	// PF is CZ-CS only, so we can put text directly in
 	// benchmark for user connection speed vs bitrate etc. will come later, we are being optimistic for now
