Script for geting thumbnails of video slideshows

--- a/pfd3.html
+++ b/pfd3.html
@@ -781,6 +781,10 @@ div.streamPlayer {
 	pointer-events: none;
 }
 
+div.streamPlayer:hover {
+	background: rgba(217,11,131,1);
+}
+
 div.streamPlayer.showBox {
 	visibility: visible;
 	opacity: 1;
@@ -870,10 +874,6 @@ div.streamPlayer ul {
 	width: 30px;
 	height: 30px;
 }
-
-/* overridable properties */
-div.streamPlayer {background: rgba(217,11,131,0.7);}
-div.streamPlayer:hover {background: rgba(217,11,131,1);}
 
 </style>
 
