--- a/upload.html
+++ b/upload.html
@@ -270,7 +270,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     }
 	input[type='file'] {
 		width: 100%;
-		height: 48px;
+		height: 50px;
 		border-radius: 2px;
 		background: #eee url(http://img5.uloz.to/content/icon_drag_drop.png) no-repeat right;
 		background: #eee url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 22 17"><path fill="gray" d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"></path></svg>') no-repeat right;
@@ -280,13 +280,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	}
 	input[type='file']:hover {
 		background-color: #c8c8c8;
-	}
-	input[type=file]::-webkit-file-upload-button {
-  		border: none;
-  		margin: 0;
-  		padding: 0;
-  		-webkit-appearance: none;
-  		width: 0;
 	}
 </style>
 
@@ -303,10 +296,10 @@ $(document).ready(function () {
 			break;
 	}
 	$( "<p><strong>" + txt +  "</strong></p>" ).insertAfter( "h1" );
-	$('form#form_upload_nginx input.uploadfile').last().attr('multiple', 'multiple').attr('webkitdirectory', 'webkitdirectory');
+	$('form#form_upload_nginx input.uploadfile').last().attr('multiple', 'multiple');
 	$('form#form_upload_nginx').change(function() {
   		setTimeout(function() {
-  			$('form#form_upload_nginx input.uploadfile').last().attr('multiple', 'multiple').attr('webkitdirectory', 'webkitdirectory');
+  			$('form#form_upload_nginx input.uploadfile').last().attr('multiple', 'multiple');
   		}, 100);
 	});
 });
