--- a/upload.html
+++ b/upload.html
@@ -272,38 +272,45 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		width: 100%;
 		height: 50px;
 		border-radius: 2px;
-		background: #eee url(http://img5.uloz.to/content/icon_drag_drop.png) no-repeat right;
-		background: #eee url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 22 17"><path fill="gray" d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"></path></svg>') no-repeat right;
+		background: #c8c8c8 url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2220%22%20height%3D%2217%22%20viewBox%3D%220%200%2022%2017%22%3E%3Cpath%20fill%3D%22gray%22%20d%3D%22M10%200l-5.2%204.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3%2011.5l-3.2-2.1h-2l3.4%202.6h-3.5c-.1%200-.2.1-.2.1l-.8%202.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2%202.1c-.4.3-.7%201-.6%201.5l.6%203.1c.1.5.7.9%201.2.9h16.3c.6%200%201.1-.4%201.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E') no-repeat right;
 		background-size: contain;
 		position: relative;
 		cursor: pointer;
 	}
 	input[type='file']:hover {
-		background-color: #c8c8c8;
+		background-color: #b4b4b4;
 	}
 </style>
 
 <script>
 $(document).ready(function () {
 	var txt;
+	var ddSupport = ((navigator.userAgent.indexOf('EdgeHTML') > -1) || (navigator.userAgent.indexOf('Trident') > -1)) ? 0 : 1;
 	switch (location.hostname) {
 		case 'www.ulozto.net':
 		case 'www.uchowajto.pl':
-			txt = 'You can pick more files to upload or use Drag&Drop way of file management.';
+			txt = 'You can pick more files at once for upload.';
+			txt += ddSupport ? ' You can also use Drag&Drop way of file selection.' : '';
 			break;
 		default:
-			txt = 'Můžete vybrat i více souborů k nahrání najednou a taky použít způsob Drag&Drop.';
+			txt = 'Můžete vybrat i více souborů k nahrání najednou.';
+			txt += ddSupport ? ' Pro jejich výběr lze rovněž použít způsob Drag&Drop.' : '';
 			break;
 	}
 	$( "<p><strong>" + txt +  "</strong></p>" ).insertAfter( "h1" );
 	$('form#form_upload_nginx input.uploadfile').last().attr('multiple', 'multiple');
-	$('form#form_upload_nginx').change(function() {
+	$('form#form_upload_nginx').change(function(action) {
+		// remove empty input elements to avoid validation conflicts
+		if (action.target.value == '' && (action.target !== $('form#form_upload_nginx input.uploadfile').last()[0])) {
+			$(action.target).remove();
+		}
   		setTimeout(function() {
   			$('form#form_upload_nginx input.uploadfile').last().attr('multiple', 'multiple');
   		}, 100);
 	});
 });
 </script>
+
 </body>
 <!-- Monitoring OK -->
 <!-- http3 -->
