Some changes to PF player, preparation or unification with UT player and button cleanup

--- a/upload.html
+++ b/upload.html
@@ -307,6 +307,8 @@ $(document).ready(function () {
 	switch (location.hostname) {
 		case 'www.ulozto.net':
 		case 'www.uchowajto.pl':
+		case 'ulozto.net':
+		case 'uchowajto.pl':
 			txt = 'You can pick more files at once for upload.';
 			txt += ddSupport ? ' You can also use Drag&Drop way of file selection.' : '';
 			break;
