--- a/utd2.html
+++ b/utd2.html
@@ -112,7 +112,7 @@ dataLayer.push({
 						<ul>
 								<li class="menu-username"><a href="/xBVToC5Y/leopard-raws-lupin-sansei-2015-09-raw-ntv-1280x720-x264-aac-mp4?do=web-login" >Přihlásit</a></li>
 								<li class="menu-registration"><a href="/xBVToC5Y/leopard-raws-lupin-sansei-2015-09-raw-ntv-1280x720-x264-aac-mp4?do=web-registration" >Registrace</a></li>
-								<li class="menu-kredit"><a href="/kredit" >Ceník kreditu</a></li>
+								<li class="menu-kredit"><a tittle="23 GB" href="/kredit" >Ceník kreditu</a></li>
 							<li class="menu-upload"><a href="/upload" >Nahrát soubory<span></span></a></li>
 						</ul>
 					</li>
@@ -728,10 +728,10 @@ div.streamPlayer {
 	font-size: 12px;
 	cursor: default;
 	pointer-events: none;
-	background: rgba(255,223,5,0.85);
+	background: rgba(241, 200, 4, .85);
 }
 
-div.streamPlayer:hover {background: rgba(255,223,5,1);}
+div.streamPlayer:hover {background: rgba(241, 200, 4, 1);}
 
 div.streamPlayer.showBox {
 	visibility: visible;
@@ -807,10 +807,13 @@ div.streamPlayer ul {
 (function () {
 	// prepare data to test, if we can initialize the streaming player or not
 
-    //var vData = {{dl.videoData}} ? {{dl.videoData}} : {},
+    //var vData = {{dl.videoData}} ? {{dl.videoData}} : {}, // GTM scope case
     var vData = dataLayer[0].videoData,
 		myVid = document.createElement('video'),
 		thumbHolder = $('div#fileVideo'),
+		userLoggedHlpr = $('li.menu-kredit a').attr('title'),
+		userLogged = (userLoggedHlpr && userLoggedHlpr.indexOf('B') > -1) ? 'logged' : 'anon',
+		canStream = vData.userCanStream ? 'can' : 'cant',
 		message = null;
 
 	switch (location.hostname) {
@@ -819,14 +822,16 @@ div.streamPlayer ul {
 		case 'ulozto.net':
 		case 'uchowajto.pl':
 			message = {
-				0:'<h4>EN Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>pouze pro přihlášené uživatele</li><li>přehrávání spotřebovává kredit</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h neomezeně</li></ul><h5><a href="/kredit">Chci přehrávat online</a></h5>',
-				1:'<h4>EN Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>až čtvrtinu dat máš zdarma</li><li>zjisti, zda je to video, které hledáš</li><li>po odečtení kreditu sleduj či stahuj video po 24h neomezeně</li></ul><h5><a href="/faq?videostreaming#videostreaming">Více informací</a></h5>'
+				'logged-cant':'<h4>Watch online &nbsp;<sup>BETA</sup></h4><ul><li>watch it immediately and without waiting</li><li>streaming consumes credit</li><li>once charged, you can watch or download the video during 24 hours freely</li></ul><h5><a href="/kredit">I want to watch online</a></h5>',
+				'logged-can':'<h4>Watch online &nbsp;<sup>BETA</sup></h4><ul><li>watch it immediately and without waiting</li><li>price is the same as for download</li><li>once charged, you can watch or download the video during 24 hours freely</li></ul><h5><a href="/faq?videostreaming#videostreaming">More information</a></h5>',
+				'anon-cant':'<h4>Watch online &nbsp;<sup>BETA</sup></h4><ul><li>for logged-in users only</li><li>streaming consumes credit</li><li>once charged, you can watch or download the video during 24 hours freely</li></ul><h5><a href="?do=web-login">I want to watch online</a></h5>'
 			};
 			break;
 		default:
 			message = {
-				0:'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>pouze pro přihlášené uživatele</li><li>přehrávání spotřebovává kredit</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h neomezeně</li></ul><h5><a href="/kredit">Chci přehrávat online</a></h5>',
-				1:'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>pouze pro přihlášené uživatele</li><li>přehrávání spotřebovává kredit</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h neomezeně</li></ul><h5><a href="/faq?videostreaming#videostreaming">Více informací</a></h5>'
+				'logged-cant':'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>sleduj video ihned a bez čekání</li><li>pro přehrávání je potřeba kredit</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h zdarma</li></ul><h5><a href="/kredit">Chci přehrávat online</a></h5>',
+				'logged-can':'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>sleduj video ihned a bez čekání</li><li>cena je stejná jako za stahování</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h zdarma</li></ul><h5><a href="/faq?videostreaming#videostreaming">Více informací</a></h5>',
+				'anon-cant':'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>pouze pro přihlášené uživatele</li><li>pro přehrávání je potřeba kredit</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h zdarma</li></ul><h5><a href="?do=web-login">Chci přehrávat online</a></h5>'
 			};
 			break;
 	}
@@ -838,7 +843,7 @@ div.streamPlayer ul {
 	}
 
 	// add video, info box and icon to the image thumbnails area
-	thumbHolder.append('<div id="video-container"><video src="[[STREAMDATAURI]]" preload="none" controls style="visibility:hidden"></video></div><svg id="icoPlay" class="initer" width="150" height="150" viewBox="0 0 30 30"><circle cx="15" cy="15" r="14" stroke-width="0" fill="black" fill-opacity=".4"/><path d="M10,7 23,15 10,23z" stroke-linejoin="round" stroke-width="1.2" stroke="white" opacity=".66" fill="rgb(99,225,0)"/></svg><div class="streamPlayer">[[MESSAGE2SHOW]]</div>'.replace('[[STREAMDATAURI]]', vData.streamUri).replace('[[MESSAGE2SHOW]]', message[1*vData.userCanStream]));
+	thumbHolder.append('<div id="video-container"><video src="[[STREAMDATAURI]]" preload="none" controls style="visibility:hidden"></video></div><svg id="icoPlay" class="initer" width="150" height="150" viewBox="0 0 30 30"><circle cx="15" cy="15" r="14" stroke-width="0" fill="black" fill-opacity=".4"/><path d="M10,7 23,15 10,23z" stroke-linejoin="round" stroke-width="1.2" stroke="white" opacity=".66" fill="rgb(241,200,4)"/></svg><div class="streamPlayer">[[MESSAGE2SHOW]]</div>'.replace('[[STREAMDATAURI]]', vData.streamUri).replace('[[MESSAGE2SHOW]]', message[userLogged + "-" + canStream]));
 
 	// prepare necessary elements and variables
 	var vid = $('div#video-container video'),
@@ -851,13 +856,15 @@ div.streamPlayer ul {
 	hint.addClass('showBox');
 	ico.css('display', 'block');
 
-	if (!vData.userCanStream || !vData.streamUri) return; // skip initialization for case of not enough of credit
+	if (!vData.userCanStream || !vData.streamUri) {
+		return; // skip initialization in case of not having enough credit
+	}
 
 	// set several listeners
 	video.addEventListener('playing', playing);
 	video.addEventListener('pause', pausePlay);
 	video.addEventListener('ended', pausePlay);
-	hint[0].addEventListener('click', checkPlay);
+	//hint[0].addEventListener('click', checkPlay);
 	ico[0].addEventListener('click', checkPlay);
 
 	// method run when video playback is turned on
@@ -884,10 +891,8 @@ div.streamPlayer ul {
 		} else {
 			vid[0].play();
             ico.attr('class', ''); // jQuery limitation for SVG
-
             vid.css('visibility', 'visible'); // stupid Chrome's autoplay blocker workaround
 			vid.css('pointer-events', 'auto');
-
 		}
 	}
 })();
