--- a/pfd4.html
+++ b/pfd4.html
@@ -858,29 +858,18 @@ div.streamPlayer ul {
 (function () {
 	// prepare data to test, if we can initialize the streaming player or not
 
-    //var vData = {{dl.videoData}} ? {{dl.videoData}} : {},
+    //var vData = {{dl.videoData}} ? {{dl.videoData}} : {}, // GTM scope case
     var vData = dataLayer[0].videoData,
 		myVid = document.createElement('video'),
 		thumbHolder = $('div#fileVideo'),
-		message = null;
-
-	switch (location.hostname) {
-		case 'www.ulozto.net':
-		case 'www.uchowajto.pl':
-		case 'ulozto.net':
-		case 'uchowajto.pl':
-			message = {
-				0:'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>pouze pro přihlášené uživatele</li><li>přehrávání spotřebovává kredit</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h neomezeně</li></ul><h5><a href="/kredit" style="color:white">Chci přehrávat online</a></h5>',
-				1:'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>až čtvrtinu dat máš zdarma</li><li>zjisti, zda je to video, které hledáš</li><li>po odečtení kreditu sleduj či stahuj video po 24h neomezeně</li></ul><h5><a href="/faq?videostreaming#videostreaming" style="color:white">Více informací</a></h5>'
+		userLoggedHlpr = $('li.menu-kredit a').attr('title'),
+		userLogged = (userLoggedHlpr && userLoggedHlpr.indexOf('B') > -1) ? 'logged' : 'anon',
+		canStream = vData.userCanStream ? 'can' : 'cant',
+		message = {
+				'logged-cant':'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>sleduj video ihned a bez čekání</li><li>pro přehrávání je potřeba kredit</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h zdarma</li></ul><h5><a href="/kredit" style="color:white">Chci přehrávat online</a></h5>',
+				'logged-can':'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>sleduj video ihned a bez čekání</li><li>cena je stejná jako za stahování</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h zdarma</li></ul><h5><a href="/faq?videostreaming#videostreaming" style="color:white">Více informací</a></h5>',
+				'anon-cant':'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>pouze pro přihlášené uživatele</li><li>pro přehrávání je potřeba kredit</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h zdarma</li></ul><h5><a href="?do=web-login" style="color:white">Chci přehrávat online</a></h5>'
 			};
-			break;
-		default:
-			message = {
-				0:'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>pouze pro přihlášené uživatele</li><li>přehrávání spotřebovává kredit</li><li>po odečtení kreditu sleduj či stahuj video po dalších 24h neomezeně</li></ul><h5><a href="/kredit" style="color:white">Chci přehrávat online</a></h5>',
-				1:'<h4>Sleduj online &nbsp;<sup>BETA</sup></h4><ul><li>až čtvrtinu dat máš zdarma</li><li>zjisti, zda je to video, které hledáš</li><li>po odečtení kreditu sleduj či stahuj video po 24h neomezeně</li></ul><h5><a href="/faq?videostreaming#videostreaming" style="color:white">Více informací</a></h5>'
-			};
-			break;
-	}
 
 	if (!vData.isStreamable || vData.bitRate > 8000000 || 
 		!myVid || !myVid.canPlayType || !myVid.canPlayType('video/mp4') || 
@@ -889,7 +878,7 @@ div.streamPlayer ul {
 	}
 
 	// add video, info box and icon to the image thumbnails area
-	thumbHolder.append('<div id="video-container"><video src="[[STREAMDATAURI]]" preload="none" controls style="visibility:hidden"></video></div><svg id="icoPlay" class="initer" width="150" height="150" viewBox="0 0 30 30"><circle cx="15" cy="15" r="14" stroke-width="0" fill="black" fill-opacity=".4"/><path d="M10,7 23,15 10,23z" stroke-linejoin="round" stroke-width="1.2" stroke="white" opacity=".66" fill="rgb(217,11,131)"/></svg><div class="streamPlayer">[[MESSAGE2SHOW]]</div>'.replace('[[STREAMDATAURI]]', vData.streamUri).replace('[[MESSAGE2SHOW]]', message[1*vData.userCanStream]));
+	thumbHolder.append('<div id="video-container"><video src="[[STREAMDATAURI]]" preload="none" controls style="visibility:hidden"></video></div><svg id="icoPlay" class="initer" width="150" height="150" viewBox="0 0 30 30"><circle cx="15" cy="15" r="14" stroke-width="0" fill="black" fill-opacity=".4"/><path d="M10,7 23,15 10,23z" stroke-linejoin="round" stroke-width="1.2" stroke="white" opacity=".66" fill="rgb(217,11,131)"/></svg><div class="streamPlayer">[[MESSAGE2SHOW]]</div>'.replace('[[STREAMDATAURI]]', vData.streamUri).replace('[[MESSAGE2SHOW]]', message[userLogged + "-" + canStream]));
 
 	// prepare necessary elements and variables
 	var vid = $('div#video-container video'),
@@ -902,13 +891,15 @@ div.streamPlayer ul {
 	hint.addClass('showBox');
 	ico.css('display', 'block');
 
-	if (!vData.userCanStream || !vData.streamUri) return; // skip initialization for case of not enough of credit
+	if (!vData.userCanStream || !vData.streamUri) {
+		return; // skip initialization in case of not having enough credit
+	}
 
 	// set several listeners
 	video.addEventListener('playing', playing);
 	video.addEventListener('pause', pausePlay);
 	video.addEventListener('ended', pausePlay);
-	hint[0].addEventListener('click', checkPlay);
+	//hint[0].addEventListener('click', checkPlay);
 	ico[0].addEventListener('click', checkPlay);
 
 	// method run when video playback is turned on
@@ -935,10 +926,8 @@ div.streamPlayer ul {
 		} else {
 			vid[0].play();
             ico.attr('class', ''); // jQuery limitation for SVG
-
             vid.css('visibility', 'visible'); // stupid Chrome's autoplay blocker workaround
 			vid.css('pointer-events', 'auto');
-
 		}
 	}
 })();
