PL domain localization fix

--- a/upload.html
+++ b/upload.html
@@ -306,9 +306,9 @@ $(document).ready(function () {
 		pf = (window.location.hostname.indexOf('pornfile') > -1) ? 'pf' : '';
 	switch (location.hostname) {
 		case 'www.ulozto.net':
-		case 'www.uchowajto.pl':
+		case 'www.zachowajto.pl':
 		case 'ulozto.net':
-		case 'uchowajto.pl':
+		case 'zachowajto.pl':
 			txt = 'You can pick more files at once for upload.';
 			txt += ddSupport ? ' You can also use Drag&Drop way of file selection.' : '';
 			break;
