--- a/utd2.html
+++ b/utd2.html
@@ -818,13 +818,13 @@ div.streamPlayer ul {
 
 	switch (location.hostname) {
 		case 'www.ulozto.net':
-		case 'www.uchowajto.pl':
+		case 'www.zachowajto.pl':
 		case 'ulozto.net':
-		case 'uchowajto.pl':
+		case 'zachowajto.pl':
 			message = {
-				'logged-cant':'<h4>Watch online &nbsp;<sup>BETA</sup></h4><ul><li>watch it immediately and without waiting</li><li>streaming consumes credit</li><li>once charged, you can watch or download the video during 24 hours freely</li></ul><h5><a href="/kredit">I want to watch online</a></h5>',
-				'logged-can':'<h4>Watch online &nbsp;<sup>BETA</sup></h4><ul><li>watch it immediately and without waiting</li><li>price is the same as for download</li><li>once charged, you can watch or download the video during 24 hours freely</li></ul><h5><a href="/faq?videostreaming#videostreaming">More information</a></h5>',
-				'anon-cant':'<h4>Watch online &nbsp;<sup>BETA</sup></h4><ul><li>for logged-in users only</li><li>streaming consumes credit</li><li>once charged, you can watch or download the video during 24 hours freely</li></ul><h5><a href="?do=web-login">I want to watch online</a></h5>'
+				'logged-cant':'<h4>Watch online &nbsp;<sup>BETA</sup></h4><ul><li>watch immediately & without waiting</li><li>streaming consumes credit</li><li>once charged, you can watch or download the video in 24 hours freely</li></ul><h5><a href="/kredit">I want to watch online</a></h5>',
+				'logged-can':'<h4>Watch online &nbsp;<sup>BETA</sup></h4><ul><li>watch immediately & without waiting</li><li>price is the same as for download</li><li>once charged, you can watch or download the video in 24 hours freely</li></ul><h5><a href="/faq?videostreaming#videostreaming">More information</a></h5>',
+				'anon-cant':'<h4>Watch online &nbsp;<sup>BETA</sup></h4><ul><li>for logged-in users only</li><li>streaming consumes credit</li><li>once charged, you can watch or download the video in 24 hours freely</li></ul><h5><a href="?do=web-login">I want to watch online</a></h5>'
 			};
 			break;
 		default:
