--- a/unified-stream-player.html
+++ b/unified-stream-player.html
@@ -1,5 +1,7 @@
 <style>
 
+/* generic definitions  */
+
 div.streamPlayer {
 	border-radius: 3px;
 	padding: 4px;
@@ -8,15 +10,12 @@ div.streamPlayer {
 	visibility: visible;
 	top: 5%;
 	left: 3%;
-	width: 210px;
+	width: 218px;
 	height: 150px;
 	font-size: 12px;
 	cursor: default;
 	pointer-events: none;
-	background: rgba(241, 200, 4, .85);
 }
-
-div.streamPlayer:hover {background: rgba(241, 200, 4, 1);}
 
 div.streamPlayer.showBox {
 	visibility: visible;
@@ -42,6 +41,10 @@ svg#icoPlay.initer {
 	opacity: 1;
 }
 
+svg#icoPlay.cant circle, svg#icoPlay.cant path {
+	cursor: not-allowed !important;
+}
+
 svg#icoPlay:hover circle {
 	fill-opacity: .75;
 }
@@ -57,7 +60,6 @@ div.streamPlayer h4 {
 	margin-top: 5px;
 	margin-bottom: 10px;
 	border-bottom: 1px solid white;
-	padding-bottom: 2px;
 }
 
 div.streamPlayer h5 {
@@ -127,8 +129,26 @@ div.streamPlayer ul {
 		return; // skip player initialization, conditions are not met
 	}
 
+	function injectStyles(rules) {
+	  	var div = $("<div />", {
+	    	html: '&shy;<style>' + rules + '</style>'
+	  	}).appendTo("body");
+	}
+
+	// insert styles differentiating PF from UT
+	if (location.hostname.indexOf('pornfile') > -1) {
+		injectStyles(".playButtonColor {fill: rgb(217, 11, 131)} " +
+					"div.streamPlayer {background: rgba(217, 11, 131, 0.7)} " +
+					"div.streamPlayer:hover {background: rgba(217, 11, 131, 1)} " +
+					"div.streamPlayer a {color: white}");
+	} else {
+		injectStyles(".playButtonColor {fill: rgb(241, 200, 4)} " +
+					"div.streamPlayer {background: rgba(241, 200, 4, .85)} " +
+					"div.streamPlayer:hover {background: rgba(241, 200, 4, 1)}");
+	}
+
 	// add video, info box and icon to the image thumbnails area
-	thumbHolder.append('<div id="video-container"><video src="[[STREAMDATAURI]]" preload="none" controls style="visibility:hidden"></video></div><svg id="icoPlay" class="initer" width="150" height="150" viewBox="0 0 30 30"><circle cx="15" cy="15" r="14" stroke-width="0" fill="black" fill-opacity=".4"/><path d="M10,7 23,15 10,23z" stroke-linejoin="round" stroke-width="1.2" stroke="white" opacity=".66" fill="rgb(241,200,4)"/></svg><div class="streamPlayer">[[MESSAGE2SHOW]]</div>'.replace('[[STREAMDATAURI]]', vData.streamUri).replace('[[MESSAGE2SHOW]]', message[userLogged + "-" + canStream]));
+	thumbHolder.append('<div id="video-container"><video src="[[STREAMDATAURI]]" preload="none" controls style="visibility:hidden"></video></div><svg id="icoPlay" class="initer [[CURSOR]]" width="150" height="150" viewBox="0 0 30 30"><circle cx="15" cy="15" r="14" stroke-width="0" fill="black" fill-opacity=".4"/><path d="M10,7 23,15 10,23z" stroke-linejoin="round" stroke-width="1.2" stroke="white" opacity=".66" class="playButtonColor"/></svg><div class="streamPlayer">[[MESSAGE2SHOW]]</div>'.replace('[[CURSOR]]', canStream).replace('[[STREAMDATAURI]]', vData.streamUri).replace('[[MESSAGE2SHOW]]', message[userLogged + "-" + canStream]));
 
 	// prepare necessary elements and variables
 	var vid = $('div#video-container video'),
