--- a/dynamic-icon.html
+++ b/dynamic-icon.html
@@ -3,24 +3,24 @@
 <body>
 
 <form>
-	<label><input type="radio" name="sett" value="avi">avi</label><br>
-	<label><input type="radio" name="sett" value="htm">htm</label><br>
-	<label><input type="radio" name="sett" value="exe">exe</label><br>
-	<label><input type="radio" name="sett" value="mp3">mp3</label><br>
-	<label><input type="radio" name="sett" value="rar">rar</label><br>
-	<label><input type="radio" name="sett" value="pdf">pdf</label><br>
-	<label><input type="radio" name="sett" value="png">png</label><br>
-	<label><input type="radio" name="sett" value="jpg">jpg</label><br>
-	<label><input type="radio" name="sett" value="mp4">mp4</label><br>
-	<label><input type="radio" name="sett" value="wmv">wmv</label><br>
-	<label><input type="radio" name="sett" value="zip">zip</label><br>
-	<label><input type="radio" name="sett" value="wav">wav</label><br>
-	<label><input type="radio" name="sett" value="flac">flac</label><br>
-	<label><input type="radio" name="sett" value="doc">doc</label><br>
-	<label><input type="radio" name="sett" value="srt">srt</label><br>
+	<label><input type="radio" name="sett" value="avi">avi</label>
+	<label><input type="radio" name="sett" value="htm">htm</label>
+	<label><input type="radio" name="sett" value="exe">exe</label>
+	<label><input type="radio" name="sett" value="mp3">mp3</label>
+	<label><input type="radio" name="sett" value="rar">rar</label>
+	<label><input type="radio" name="sett" value="pdf">pdf</label>
+	<label><input type="radio" name="sett" value="png">png</label>
+	<label><input type="radio" name="sett" value="jpg">jpg</label>
+	<label><input type="radio" name="sett" value="mp4">mp4</label>
+	<label><input type="radio" name="sett" value="wmv">wmv</label>
+	<label><input type="radio" name="sett" value="zip">zip</label>
+	<label><input type="radio" name="sett" value="wav">wav</label>
+	<label><input type="radio" name="sett" value="flac">flac</label>
+	<label><input type="radio" name="sett" value="doc">doc</label>
+	<label><input type="radio" name="sett" value="srt">srt</label>
 </form>
 
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 1660 1686">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="90%" viewBox="0 0 1660 1686">
 <title>Template ICON</title>
 
 <defs>
@@ -40,7 +40,18 @@
 <path d="M 1570.3013,515.26387 C 1570.3013,493.59218 1561.6928,472.80854 1546.3687,457.48429 L 1112.7398,23.854476 C 1097.4147,8.5304215 1076.631,-0.078097466 1054.9603,-0.078097466 L 48.023446,-0.078097466 C 33.576643,-0.078097466 19.720782,5.6614405 9.5037642,15.87746 C -0.71228979,26.093496 -6.4516158,39.949266 -6.4516158,54.396986 L -6.4516158,1864.2041 C -6.4516158,1878.6511 -0.71228979,1892.5069 9.5037642,1902.7239 C 19.719822,1912.9399 33.575681,1918.6783 48.023446,1918.6783 L 1515.8272,1918.6783 C 1530.275,1918.6783 1544.1308,1912.9389 1554.3469,1902.7239 C 1564.5629,1892.5069 1570.3013,1878.6511 1570.3013,1864.2041 L 1570.3013,515.26387 z " style="fill:#838383" id="grayBackground2nd"/>
 
 <path d="M 1556.6828,547.85877 C 1556.6828,526.18708 1548.0742,505.40343 1532.7502,490.07918 C 1517.4261,474.75532 1496.6423,466.14678 1474.9707,466.14678 L 1140.8272,466.14678 C 1118.2629,466.14678 1099.9707,447.85445 1099.9707,425.29011 L 1099.9707,95.252506 C 1099.9707,73.581006 1091.3612,52.796976 1076.0381,37.473116 C 1060.714,22.148866 1039.9302,13.540517 1018.2586,13.540517 L 48.023446,13.540517 C 37.187623,13.540517 26.795727,17.84421 19.133685,25.507106 C 11.471643,33.169416 7.1669092,43.561146 7.1669092,54.396986 L 7.1669092,1864.2041 C 7.1669092,1875.039 11.471643,1885.4319 19.133685,1893.0929 C 26.795727,1900.755 37.187623,1905.0596 48.023446,1905.0596 L 1515.8272,1905.0596 C 1526.662,1905.0596 1537.0549,1900.755 1544.716,1893.0929 C 1552.379,1885.4309 1556.6828,1875.039 1556.6828,1864.2041 L 1556.6828,547.85877 z " style="fill:url(#radialGradient5682)" id="whiteSheet"/>
+
 <path d="M 1529.4447,520.62073 L 34.404921,520.62073 L 34.404921,1823.3467 C 34.404921,1837.7944 40.144247,1851.6504 50.360301,1861.8662 C 60.576357,1872.0823 74.432216,1877.8218 88.879979,1877.8218 L 1474.9707,1877.8218 C 1489.4184,1877.8218 1503.2743,1872.0815 1513.4903,1861.8662 C 1523.7064,1851.6512 1529.4447,1837.7944 1529.4447,1823.3467 L 1529.4447,520.62073 z " style="fill:url(#linearGradient5674)" id="gentleGradientOnBottom"/>
+
+<mask id="myMask">
+  <use xlink:href="#whiteSheet"/>
+</mask>
+<g id="masker" mask="url(#myMask)">
+	<!--g>
+		<rect x="-1000" y="-1000" width="4000" height="4000" fill="blue"/>
+	</g-->
+</g>
+
 <path d="M 1113.5892,43.964746 L 1113.5892,425.29011 C 1113.5892,432.51407 1116.4584,439.44195 1121.5674,444.55017 C 1126.6754,449.65799 1133.6034,452.52719 1140.8272,452.52719 L 1522.1527,452.52719 L 1113.5892,43.964746 z " style="fill:url(#linearGradient5690)" id="gradienTopRighCorner"/>
 <path d="M 1474.9553,465.82152 L 1140.7692,465.82152 C 1118.2021,465.82152 1099.9076,447.52696 1099.9076,424.95968 L 1099.9076,94.881056 C 1099.9076,73.206656 1091.2969,52.420246 1075.9719,37.094126 C 1060.6459,21.768116 1039.8592,13.158586 1018.185,13.158586 L 258.41351,13.158586 L 275.31699,1222.7981 L 1556.677,1267.874 L 1556.677,547.54399 C 1556.677,525.86958 1548.0672,505.08317 1532.7412,489.75718 C 1517.4163,474.432 1496.6297,465.82152 1474.9553,465.82152 z " style="fill:url(#radialGradient2972)" id="gentleShadowOnderTopRightCorner"/>
 </g>
@@ -61,7 +72,7 @@
 	<circle cx="277.582" cy="180.18" r="9.83"/>
 </g>
 
-<path id="rar" data-hue="39" fill="url(#mainGrad)" transform="scale(2) translate(90 120)" d="M305.016,224.064v252.192l200.778-38.103V315.277c0-5.144,4.48-9.139,9.59-8.553l24.701,3.822
+<path id="rar" data-hue="39" fill="url(#mainGrad)" transform="scale(2) translate(90 180)" d="M305.016,224.064v252.192l200.778-38.103V315.277c0-5.144,4.48-9.139,9.59-8.553l24.701,3.822
 		c4.346,0.499,7.627,4.178,7.627,8.553v142.748c0,4.058-2.833,7.564-6.8,8.417l-219.787,47.258
 		c-10.621,2.283-21.604,2.308-32.235,0.072L71.462,471.859c-3.902-0.82-6.73-4.214-6.834-8.201l-3.756-144.974
 		c-0.118-4.547,3.322-8.4,7.852-8.798l184.692-16.229c3.203-0.281,5.982-2.325,7.207-5.297l27.824-67.573
@@ -70,7 +81,7 @@
 		 M304.188,92.747l74.106,162.712c1.295,2.844,4.029,4.762,7.145,5.013l217.25,17.471c6.547,0.526,11.248-6.178,8.522-12.154
 		l-56.658-124.212c-1.172-2.569-3.528-4.399-6.308-4.9L304.188,92.747z"/>
 
-<path id="mp3" data-hue="106" fill="url(#mainGrad)" transform="scale(4) translate(40 70)" d="M305.773,130.393h-80.411l-17.031-33.767c-2.076-4.104-6.519-6.405-11.086-5.706c-4.541,0.701-8.114,4.248-8.854,8.782
+<path id="mp3" stroke-width="6" data-hue="106" fill="url(#mainGrad)" transform="scale(4) translate(40 70)" d="M305.773,130.393h-80.411l-17.031-33.767c-2.076-4.104-6.519-6.405-11.086-5.706c-4.541,0.701-8.114,4.248-8.854,8.782
 		l-7.612,46.877l-7.207,44.377l-5.608-43.805l-12.407-96.88c-0.637-4.948-4.629-8.779-9.592-9.215
 		c-4.974-0.388-9.564,2.646-11.05,7.402l-31.682,101.582l-9.518,30.518l-4.847-29.876l-7.161-44.151
 		c-0.754-4.629-4.456-8.215-9.106-8.818c-4.645-0.567-9.147,1.914-11.05,6.204l-17.663,39.667H10.605
@@ -229,6 +240,7 @@
 <script>
 
 var txt = document.getElementById('txt'),
+	masker = document.getElementById('masker'), 
 	icons = document.getElementById('icons'),
 	gr1 = document.getElementById('gr1'),
 	gr2 = document.getElementById('gr2'),
@@ -242,9 +254,22 @@ document.forms[0].onchange = function (e) {
 		icons.children[i].style.visibility = 'hidden';
 	}
 	// show it
-	var el = document.getElementById(e.target.value)
+	var el = document.getElementById(e.target.value);
 	console.log('detail', e.target.value, el, el.dataset);
 	el.style.visibility = 'visible';
+
+	for (var i = 0; i < masker.childElementCount; i++) {
+		masker.removeChild(masker.children[i]);
+	}
+	var newEl = el.cloneNode(true);
+	//var g = document.createElement("g");
+	//g.setAttribute('transform', 'translate(1 1) scale(2)');
+	//g.appendChild(newEl);
+	//masker.appendChild(g);
+	masker.appendChild(newEl);
+	newEl.setAttribute('fill', 'gray');
+	newEl.setAttribute('opacity', 0.5);
+
 	txt.firstChild.nodeValue = e.target.value.toUpperCase();
 	gr1.setAttribute('stop-color', 'hsl('+ el.getAttribute('data-hue') + ', 100%, 66%)');
 	gr2.setAttribute('stop-color', 'hsl('+ el.getAttribute('data-hue') + ', 100%, 20%)');
