Hiring banner update, JS credit tag a es-feeding param change

--- a/hiring-ut-banner/nabor-leader.htm
+++ b/hiring-ut-banner/nabor-leader.htm
@@ -13,7 +13,7 @@
   		font-family: "Open Sans",sans-serif;
   	}
     #prace {
-    	background: white url(people-silhouette.png) 4px 4px no-repeat;
+    	background: white url(sil2.png) 4px 4px no-repeat;
     	width: 745px;
     	height: 100px;
     	border: 0 solid black;
@@ -48,7 +48,7 @@
 
 <body>
   <div id="prace">
-  	<h2>Usilovně hledaní kolegové</h2>
+  	<h2>Aktuálně hledaní kolegové</h2>
   	<ul>
       <li><a href="http://www.uloz.to/kariera#Program%C3%A1tor%20Python">Python Programátor</a>
       <li><a href="http://uloz.to/kariera#Linux-Administrator">Linux Administrátor</a>
