Some changes to hiring banners

--- a/hiring-ut-banner/nabor-leader.htm
+++ b/hiring-ut-banner/nabor-leader.htm
@@ -13,7 +13,7 @@
   		font-family: "Open Sans",sans-serif;
   	}
     #prace {
-    	background: white url(sil2.png) 4px 4px no-repeat;
+    	background: white url(people-silhouette2.png) 4px 4px no-repeat;
     	width: 745px;
     	height: 100px;
     	border: 0 solid black;
@@ -48,12 +48,12 @@
 
 <body>
   <div id="prace">
-  	<h2>Aktuálně hledaní kolegové</h2>
+  	<h2>Právě hledaní kolegové</h2>
   	<ul>
-      <li><a href="http://www.uloz.to/kariera#Program%C3%A1tor%20Python">Python Programátor</a>
-      <li><a href="http://uloz.to/kariera#Linux-Administrator">Linux Administrátor</a>
-  		<li><a href="http://uloz.to/kariera#PHP">PHP / JS Programátor</a>
-  		<li><a href="http://uloz.to/kariera#Account%20Manager%20online%20inzerce">Account Manager</a>
+      <li><a href="https://www.uloz.to/kariera#Program%C3%A1tor%20Python">Python Programátor</a>
+      <li><a href="https://uloz.to/kariera#Linux-Administrator">Linux Administrátor</a>
+  		<li><a href="https://uloz.to/kariera#PHP">PHP / JS Programátor</a>
+  		<li><a href="https://uloz.to/kariera#produktak">Product Manager</a>
   	</ul>
   </div>
 </body>
