New banners and nudity check update

--- a/hiring-ut-banner/nabor-leader.htm
+++ b/hiring-ut-banner/nabor-leader.htm
@@ -33,7 +33,7 @@
     }
     li {
     	text-align: left;
-    	line-height: 140%;
+    	line-height: 170%;
     	font-size: 14px;
       list-style-type: square;
     }
@@ -50,10 +50,9 @@
   <div id="prace">
   	<h2>Právě hledaní kolegové</h2>
   	<ul>
-      <li><a href="https://www.uloz.to/kariera#Program%C3%A1tor%20Python">Python Programátor</a>
+      <li><a href="https://uloz.to/kariera#UX">UX Designér / Architekt</a>
+      <li><a href="https://uloz.to/kariera#Program%C3%A1tor%20Python">Python Programátor</a>
       <li><a href="https://uloz.to/kariera#Linux-Administrator">Linux Administrátor</a>
-  		<li><a href="https://uloz.to/kariera#PHP">PHP / JS Programátor</a>
-  		<li><a href="https://uloz.to/kariera#produktak">Product Manager</a>
   	</ul>
   </div>
 </body>
