--- a/hiring-ut-banner/nabor.htm
+++ b/hiring-ut-banner/nabor.htm
@@ -65,10 +65,9 @@
   	<h1>Nebaví Tě práce?<br>Tak to změn!!</h1>
   	<h2>Právě hledáme:</h2>
   	<ul>
-      <li><a href="http://www.uloz.to/kariera#Program%C3%A1tor%20Python">Python Programátora CDN</a>
-      <li><a href="http://uloz.to/kariera#Linux-Administrator">Linux Administrátora</a>
-  		<li><a href="http://uloz.to/kariera#PHP">PHP Programátora</a>
-  		<li><a href="http://uloz.to/kariera#Account%20Manager%20online%20inzerce">Account Managera</a>
+      <li><a href="https://uloz.to/kariera#Program%C3%A1tor%20Python">Python Programátora</a>
+      <li><a href="https://uloz.to/kariera#Linux-Administrator">Linux Administrátora</a>
+  		<li><a href="https://uloz.to/kariera#UX">UX Designéra</a>
   	</ul>
   </div>
 </body>
