--- a/hiring-ut-banner/nabor2.htm
+++ b/hiring-ut-banner/nabor2.htm
@@ -66,8 +66,8 @@
   	<ul>
       <li><a href="https://www.uloz.to/kariera#Program%C3%A1tor%20Python">Python Programátora</a>
       <li><a href="https://uloz.to/kariera#Linux-Administrator">Linux Administrátora</a>
-  		<li><a href="https://uloz.to/kariera#PHP">PHP Programátora</a>
-  		<li><a href="https://uloz.to/kariera#produktak">Product Managera</a>
+      <li><a href="https://uloz.to/kariera#produktak">Product Managera</a>
+  		<li><a href="https://uloz.to/kariera#UX">UX Designéra/Architekta</a>
   	</ul>
   </div>
 </body>
