Several algo comparison scripts + hiring banner fix

--- a/hiring-ut-banner/nabor-leader.htm
+++ b/hiring-ut-banner/nabor-leader.htm
@@ -13,7 +13,7 @@
   		font-family: "Open Sans",sans-serif;
   	}
     #prace {
-    	background: white url(people-silhouette2.png) 4px 4px no-repeat;
+    	background: white url(people-silhouette.png) 4px 4px no-repeat;
     	width: 745px;
     	height: 100px;
     	border: 0 solid black;
@@ -50,9 +50,9 @@
   <div id="prace">
   	<h2>Právě hledaní kolegové</h2>
   	<ul>
-      <li><a href="https://uloz.to/kariera#UX">UX Designér / Architekt</a>
-      <li><a href="https://uloz.to/kariera#Program%C3%A1tor%20Python">Python Programátor</a>
-      <li><a href="https://uloz.to/kariera#Linux-Administrator">Linux Administrátor</a>
+      <li><a href="https://uloz.to/kariera#carrier-v1">Produktový manažer</a>
+      <li><a href="https://uloz.to/kariera#carrier-v4">Python programátor</a>
+      <li><a href="https://uloz.to/kariera#carrier-v3">Linux administrátor</a>
   	</ul>
   </div>
 </body>
