Some sentence score test sets, new hiring banner and minor external scoring script tweaks

--- a/hiring-ut-banner/nabor-leader.htm
+++ b/hiring-ut-banner/nabor-leader.htm
@@ -13,7 +13,7 @@
   		font-family: "Open Sans",sans-serif;
   	}
     #prace {
-    	background: white url(people-silhouette.png) 4px 4px no-repeat;
+    	background: white url(superheroes.png) 2px 20px no-repeat;
     	width: 745px;
     	height: 100px;
     	border: 0 solid black;
@@ -33,7 +33,7 @@
     }
     li {
     	text-align: left;
-    	line-height: 170%;
+    	line-height: 130%;
     	font-size: 14px;
       list-style-type: square;
     }
@@ -48,11 +48,12 @@
 
 <body>
   <div id="prace">
-  	<h2>Právě hledaní kolegové</h2>
+  	<h2>Pracuj pro Ulož.to:</h2>
   	<ul>
-      <li><a href="https://uloz.to/kariera#carrier-v1">Produktový manažer</a>
-      <li><a href="https://uloz.to/kariera#carrier-v4">Python programátor</a>
-      <li><a href="https://uloz.to/kariera#carrier-v3">Linux administrátor</a>
+      <li><a href="https://uloz.to/kariera#carrier-cdn">Vývojář CDN</a>
+      <li><a href="https://uloz.to/kariera#carrier-php">Webový vývojář</a>
+      <li><a href="https://uloz.to/kariera#carrier-linux">Linux administrátor</a>
+      <li><a href="https://uloz.to/kariera#carrier-produkt">Senior produktový manažer</a>
   	</ul>
   </div>
 </body>
