Quite good video views

--- a/hiring-ut-banner/nabor-leader.htm
+++ b/hiring-ut-banner/nabor-leader.htm
@@ -33,7 +33,7 @@
     }
     li {
     	text-align: left;
-    	line-height: 130%;
+    	line-height: 120%;
     	font-size: 14px;
       list-style-type: square;
     }
@@ -43,17 +43,21 @@
     a:hover{
       color: rgb(30,87,153);
     }
+    span.fil {
+      color: #990f6b;
+    }
   </style>
 </head>
 
 <body>
   <div id="prace">
-  	<h2>Pracuj pro Ulož.to:</h2>
+  	<h2>Pracuj pro <span class="fil">Ulož.to</span>:</h2>
   	<ul>
-      <li><a href="https://uloz.to/kariera#carrier-cdn">Vývojář CDN</a>
-      <li><a href="https://uloz.to/kariera#carrier-php">Webový vývojář</a>
-      <li><a href="https://uloz.to/kariera#carrier-linux">Linux administrátor</a>
-      <li><a href="https://uloz.to/kariera#carrier-produkt">Senior produktový manažer</a>
+      <li><a href="https://uloz.to/kariera#carrier-linux" target="_top">IT Operations Teamleader</a>
+      <li><a href="https://uloz.to/kariera#carrier-cdn" target="_top">Vývojář CDN</a>
+      <li><a href="https://uloz.to/kariera#carrier-linux-senior" target="_top">Senior Linux administrátor</a>
+      <li><a href="https://uloz.to/kariera#carrier-php" target="_top">Webový vývojář</a>
+      <li><a href="https://uloz.to/kariera#carrier-produkt" target="_top">Senior produktový manažer</a>
   	</ul>
   </div>
 </body>
